--- a/_posts/2021-06-21-0621-0627.md
+++ b/_posts/2021-06-21-0621-0627.md
@@ -105,3 +105,89 @@ print(data_stack.pop())
 2
 ```
 
+## 0622
+# 테스트 2차 준비 7일차
+오늘은 링크드 리스트에 대해 학습하였다.  
+확실히 어제에 비해 난이도가 있었다.  
+또 문제를 제출한 뒤 3분 뒤에 문제를 풀어서 너무 아쉬웠다.  
+실력 부족이라 생각하고 내일은 더 열심히 공부해야겠다.
+
+# 링크드 리스트
+* 연결 리스트라고도 함
+* 배열은 순차적으로 연결된 공간에 데이터를 나열하는 데이터 구조이지만, 링크드 리스트는 떨어진 곳에 존재하는 데이터를 화살표로 연결해서 관리하는 데이터 구조이다.
+* 파이썬은 리스트 타입이 링크드 리스트의 기능을 모두 지원한다.
+* 노드 : 데이터 저장 단위(데이터값, 포인터)로 구성
+* 포인터 : 각 노드 안에서, 다음이나 이전의 노드와의 연결 정보를 가지고 있는 공간
+
+### Node 구현
+* 보통 파이썬에서 링크드 리스트 구현시, 파이썬 클래스를 활용
+```python
+class Node:
+    def __init__(self, data, next=None):
+        self.data = data
+        self.next = next
+```
+
+### 링크드 리스트의 장단점
+* 장점
+	* 미리 데이터 공간을 할당하지 않아도 됨
+* 단점
+	* 연결을 위한 별도 데이터 공간이 필요하므로, 저장공간 효율이 높지 않음
+	* 연결 정보를 찾는 시간이 필요하므로 접근 속도가 느림
+	* 중간 데이터 삭제시, 앞뒤 데이터의 연결을 재구성해야 하는 부가적인 작업 필요
+
+### 파이썬 객체지향 프로그래밍으로 링크드 리스트 구현
+```python
+class Node:
+    def __init__(self, data, next=None):
+        self.data = data
+        self.next = next
+    
+class NodeMgmt:
+    def __init__(self, data):
+        self.head = Node(data)
+        
+    def add(self, data):
+        if self.head == '':
+            self.head = Node(data)
+        else:
+            node = self.head
+            while node.next:
+                node = node.next
+            node.next = Node(data)
+        
+    def desc(self):
+        node = self.head
+        while node:
+            print (node.data)
+            node = node.next
+```
+* NodeMgmt class는 생성할 때 받은 데이터로 Node를 생성하며 head로 지정한다.
+* add 메소드는 데이터를 리스트 끝에 추가한다.
+* desc 메소드는 리스트 목록을 출력한다.
+
+### 특정 노드를 삭제하는 메서드
+```python
+    def delete(self, data):
+        if self.head == '':
+            print("해당 값을 가진 노드가 없습니다.")
+            return
+
+        if self.head.data == data:
+            tmp = self.head
+            self.head = self.head.next
+            del tmp
+        else:
+            node = self.head
+            while node.next:
+                if node.next.data == data:
+                    tmp = node.next
+                    node.next = node.next.next
+                    del tmp
+                    return
+                else:
+                    node = node.next
+```
+
+
+
