--- a/_posts/2021-06-21-0621-0627.md
+++ b/_posts/2021-06-21-0621-0627.md
@@ -189,5 +189,204 @@ class NodeMgmt:
                     node = node.next
 ```
 
+## 테스트 2차 준비 8일차
+# 시간 복잡도 - 알고리즘 복잡도
+* 하나의 문제를 푸는 알고리즘은 다양할 수 있다.
+* 다양한 알고리즘 중 어느 알고리즘이 더 좋은지를 분석하기 위해, 복잡도를 정의하고 계산
+
+## 알고리즘 복잡도 계산 항목
+1. 시간 복잡도: 알고리즘 실행 속도
+2. 공간 복잡도: 알고리즘이 사용하는 메모리 사이즈
+
+* 가장 중요한 시간 복잡도를 이해하고 계산할 수 있어야 한다.
+* 알고리즘 시간 복잡도에 가장 영향을 많이 미치는 요소는 반복문이다.
+
+### 알고리즘 성능 표기법
+* Big O (빅-오) 표기법
+	* 알고리즘 최악의 실행 시간을 표기
+	* 가장 많이/일반적으로 사용
+	* 아무리 최악의 상황이라도, 이정도 성능은 보장한다는 의미
+* 오메가 표기법
+	* 알고리즘 최상의 실행 시간을 표기
+* 세타 표기법
+	* 세타 표기법은 알고리즘 평균 실행 시간을 표기
+
+### 빅 오 표기법
+* O(입력)
+	* 입력 n에 따라 결정되는 시간 복잡도 함수
+	* 입력 n의 크기에 따라 기하급수적으로 시간 복잡도가 늘어남
+		* O(1) < O(logn) < O(n) < O(nlogn) < O(n^2) < O(2^n) < O (n!)
+*  단순하게 입력 n에 따라, 몇 번 실행이 되는지를 계산하면 된다.
+	* 표현식에 가장 큰 영향을 미치는 n의 단위로 표기
+
+# 해쉬 테이블
+## 해쉬 구조
+* Hash Table : 키 에 데이터를 저장하는 데이터 구조
+	* Key를 통해 바로 데이터를 받아올 수 있으므로, 속도가 획기적으로 빨라짐
+	* 파이썬 딕셔너리 타입이 해쉬 테이블의 예
+	* 보통 배열로 미리 Hash Table 사이즈만큼 생성 후에 사용 (공간과 탐색 시간을 밪바꾸는 기법)
+	* 파이썬에서는 해쉬를 별도 구현할 이유가 없음 - 딕셔너리 타입 사용
+* 해쉬 : 임의 값을 고정 길이로 변환하는 것
+* 해쉬 테이블 : 키 값의 연산에 의해 직접 접근이 가능한 데이터 구조
+* 해싱 함수 : Key에 대해 산술 연산을 이용해 데이터 위치를 찾을 수 있는 함수
+* 해쉬 값 또는 해쉬 주소 : Key를 해싱 함수로 연산해서, 해쉬 값을 알아내고 이를 기반으로 해쉬 테이블에서 해당 Key에 대한 데이터 위치를 일관성있게 찾을 수 있음
+* 슬롯 : 한 개의 데이터를 저장할 수 있는 공간
+* 저장할 데이터에 대해 Key를 추출할 수 있는 별도 함수도 존재할 수 있음
+
+
+### 해쉬 테이블의 장단점과 주요 용도
+* 장점
+	* 데이터 저장/읽기 속도가 빠르다. (검색 속도가 빠르다.)
+	* 해쉬는 키에 데이터가 있는지(중복) 확인이 쉽다.
+* 단점
+	* 일반적으로 저장공간이 좀 더 많이 필요하다.
+	* 여러 키에 해당하는 주소가 동일할 경우 충돌을 해결하기 위한 별도 자료구조가 필요
+* 주요 용도
+	* 검색이 많이 필요한 경우
+	* 저장, 삭제, 읽기가 빈번한 경우
+	* 캐쉬 구현시
+
+### 파이썬에서 리스트 변수를 활용해서 해쉬 테이블 구현
+```python
+hash_table = list([0 for i in range(8)])
+
+def get_key(data):
+    return hash(data)
+
+def hash_function(key):
+    return key % 8
+
+def save_data(data, value):
+    hash_address = hash_function(get_key(data))
+    hash_table[hash_address] = value
+
+def read_data(data):
+    hash_address = hash_function(get_key(data))
+    return hash_table[hash_address]
+
+
+save_data('Dave', '0102030200')
+save_data('Andy', '01033232200')
+print(read_data('Andy'))
+
+# 결과
+01033232200
+```
+
+## 충돌(Collision) 해결 알고리즘
+* 해쉬 테이블의 가장 큰 문제는 충돌의 경우이다.
+* 이 문제를 충돌 또는 해쉬 충돌이라고 부른다.
+
+### Chaining 기법
+* 개방 해슁 또는 Open Hashing 기법 중 하나
+* 해쉬 테이블 저장공간 외의 공간을 활용하는 기법
+* 충돌이 일어나면, 링크드 리스트라는 자료 구조를 사용해서, 링크드 리스트로 데이터를 추가로 뒤에 연결시켜서 저장하는 기법
+
+```python
+def save_data(data, value):
+    index_key = get_key(data)
+    hash_address = hash_function(index_key)
+
+    if hash_table[hash_address] != 0:
+        for index in range(len(hash_table[hash_address])):
+            if hash_table[hash_address][index][0] == index_key:
+                hash_table[hash_address][index][1] = value
+                return
+        hash_table[hash_address].append([index_key, value])
+    else:
+        hash_table[hash_address] = [[index_key, value]]
+
+def read_data(data):
+    index_key = get_key(data)
+    hash_address = hash_function(index_key)
+
+    if hash_table[hash_address] != 0:
+        for index in range(len(hash_table[hash_address])):
+            if hash_table[hash_address][index][0] == index_key:
+                return hash_table[hash_address][index][1]
+            else:
+                return None
+    else:
+        return None
+```
+* save_data와 read_data만 변경
+* 데이터의 키 값을 따로 저장하기 위해 index_key 변수를 선언해서 저장
+* 데이터 저장 시, 해시 테이블에서 해쉬 주소에 데이터가 없다면 리스트를 선언하고 index_key값과 value를 저장
+* 데이터가 있다면, 해당 해시 주소에 있는 데이터의 개수만큼 반복문을 실행하여 왼쪽에 저장한 값들과 index_key를 비교
+* 왼쪽 값과 index_key 값이 같다면 기존의 것을 수정
+* 같은 값이 없다면 리스트에 새로운 데이터를 추가
+* 데이터 검색 시, 해시 테이블에서 해쉬 주소에 데이터가 없다면 None을 반환
+* 데이터가 있다면, 해당 해시 주소에 있는 데이터의 개수만큼 반복문을 실행하여 왼쪽에 저장한 값들과 index_key를 비교
+* 왼쪽 값과 index_key 값이 같다면 오른쪽에 저장된 value를 반환
+* 같은 값이 없다면 해당하는 키가 없으므로 None 반환
+
+### Linear Probing 기법
+* 혜쇄 해슁 또는 Closing Hashing 기법 중 하나
+* 해쉬 테이블 저장공간 안에서 충돌 문제를 해결하는 기법
+* 충돌이 일어나면, 해당 hash address의 다음 address부터 맨 처음 나오는 빈공간에 저장하는 기법
+* 저장공간 활용도를 높이기 위한 기법
+
+```python
+def save_data(data, value):
+    index_key = get_key(data)
+    hash_address = hash_function(index_key)
+
+    if hash_table[hash_address] != 0:
+        for index in range(hash_address, len(hash_table)):
+            if hash_table[index] == 0:
+                hash_table[index] = [index_key, value] 
+                return
+            elif hash_table[index][0] == index_key:
+                hash_table[index][1] == value
+                return
+    else:
+        hash_table[hash_address] = [index_key, value]
+
+def read_data(data):
+    index_key = get_key(data)
+    hash_address = hash_function(index_key)
+
+    if hash_table[hash_address] != 0:
+        for index in range(hash_address, len(hash_table)):
+            if hash_table[index][0] == 0:
+                return None
+            elif hash_table[index][0] == index_key:
+                return hash_table[index][1]
+    else:
+        return None
+```
+* 데이터 저장 시, 해시 테이블에서 해시 주소에 해당하는 값이 없다면 index_key와 value를 저장한다.
+* 해시 주소에 해당하는 값이 있다면, hash_address부터 hash_table의 개수만큼 인덱스를 이용해 반복문을 실행한다.
+* hash_table에서 값이 없는 index를 발견한다면, 해당 인덱스에 index_key와 value를 저장한다.
+* 혹은 index 왼쪽 값이 index_key와 같은 값이 있다면 해당 value를 수정한다.
+* 검색의 경우도 마찬가지로 반복문을 활용하여, 인덱스의 왼쪽 값이 0이거나 해당 주소에 맞는 값이 없다면 None을 반환한다.
+* 인덱스의 왼쪽 값이 index_key와 같다면 해당 인덱스의 오른쪽 값을 반환해준다.
+
+### 빈번한 충돌을 개선하는 방법
+* 해쉬 함수를 재정의 및 해쉬 테이블 저장공간을 확대
+
+```python
+hash_table = list([None for i in range(16)])
+
+def hash_function(key):
+    return key % 16
+```
+
+### 해쉬 함수와 키 생성 함수
+* 파이썬의 hash() 함수는 실행할 때마다 값이 달라질 수 있음
+* 유명한 해쉬 함수들이 있는데 제일 대표적으로 SHA 함수가 있다.
+	* 어떤 데이터도 유일한 고정된 크기의 고정값을 리턴해주므로, 해쉬 함수로 유용하게 활용 가능하다.
+
+### 시간 복잡도
+* 일반적인 경우(충돌이 없는 경우)는 O(1)
+* 최악의 경우(충돌이 모두 발생하는 경우)는 O(n)
+* 해쉬 테이블의 경우, 일반적인 경우를 기대하고 만들기 때문에, 시간 복잡도는 O(1)이라고 말할 수 있다.
+* 검색에서 16개의 배열에 데이터를 저장하고, 검색하면 O(n)
+* 16개의 데이터 저장공간을 가진 해쉬 테이블에 데이터를 저장하고, 검색할 때 O(1)
+
+
+
+
+
 
 
