--- a/_posts/2021-06-21-0621-0627.md
+++ b/_posts/2021-06-21-0621-0627.md
@@ -386,6 +386,108 @@ def hash_function(key):
 
 
 
+## 0624
+# 테스트 2차 준비 9일차
+
+
+# 트리
+## 트리 구조
+* Node와 Branch를 이용해서, 사이클을 이루지 않도록 구성한 데이터 쿠조
+* 트리 중 이진 트리 형태의 구조로, 탐색 알고리즘 구현을 위해 많이 사용
+
+### 용어
+* Node : 트리에서 데이터를 저장하는 기본 요소 (데이터와 다른 연결된 노드에 대한 Branch 정보 포함)
+* Root Node : 트리 맨 위에 있는 노드
+* Level : 최상위 노드를 Level 0으로 하였을 때, 하위 Branch로 연결된 노드의 깊이
+* Parent Node : 어떤 노드의 다음 레벨에 연결된 노드
+* Child Node : 어떤 노드의 상위 레벨에 연결된 노드
+* Leaf Node (Terminal Node) : Child Node가 하나도 없는 노드
+* Sibling (Brother Node) : 동일한 Parent Node를 가진 노드
+* Depth : 트리에서 Node가 가질 수 있는 최대 Level
+
+### 이진 트리와 이진 탐색 트리 (Binary Search Tree)
+* 이진 트리 : 노드의 최대 Branch가 2인 트리
+* 이진 탐색 트리 : 이진 트리에 다음과 같은 추가적인 조건이 있는 트리
+	* 왼쪽 노드는 해당 노드보다 작은 값, 오른쪽 노드는 해당 노드보다 큰 값을 가지고 있다.
+
+### 자료 구조 이진 탐색 트리의 장점과 주요 용도
+* 주요 용도: 데이터 검색
+* 장점 : 탐색 속도를 개선할 수 있다.
+
+## 파이썬 객체지향 프로그래밍으로 트리 구현하기
+### Node 클래스
+```python
+class Node:
+    def __init__(self, value):
+        self.value = value
+        self.left = None
+        self.right = None
+```
+* 노드는 값을 받아서 저장할 수 있게 한다.
+* child Node의 주소값을 저장하는 left와 right의 기본값으로 None을 설정한다.
+
+### NodeMgmt 클래스와 데이터 삽입, 검색
+
+```python
+class NodeMgmt:
+    def __init__(self, head):
+        self.head = head
+
+    def insert(self, value):
+        self.current_node = self.head
+        while True:
+            if value < self.current_node.value:
+                if self.current_node.left != None:
+                    self.current_node = self.current_node.left
+                else:
+                    self.current_node.left = Node(value)
+                    break
+            else:
+                if self.current_node.right != None:
+                    self.current_node = self.current_node.right
+                else:
+                    self.current_node.right = Node(value)
+                    break
+    
+    def search(self, value):
+        self.current_node = self.head
+        while self.current_node:
+            if self.current_node.value == value:
+                return True
+            elif value < self.current_node.value:
+                self.current_node = self.current_node.left
+            else:
+                self.current_node = self.current_node.right
+        return False
+```
+
+* 생성할 때 head 노드를 정해서 루트 노드로 설정한다.
+* insert 메소드는 매개 변수로 value를 받아서 저장하는 메소드이다.
+* current_node에 루트 노드를 저장한 뒤, 무한 루프를 도는 반복문을 실행해서 value가 루트 노드의 값보다 작고 루트 노드의 left 값이 None이 아니라면 left의 값을 current_node에 저장해서 다시 반복문을 돌게 한다.
+* 그러다가 left 값이 비어 있는 노드를 발견하면 left에 새로운 노드를 생성하고 그 안에 값을 집어 넣어서 트리를 구성하도록 한다.
+* search 메소드는 value를 매개 변수로 받아서 해당 값을 가진 노드 탐색에 성공하면 True를 반환하고, 실패하면 False를 반환한다.
+* 마찬가지로 루트 노드를 변수에 저장하고, 변수가 None이 아닐 동안 돌아가는 반복문을 실행시킨다.
+* 만약 노드의 값이, value와 같다면 값을 찾았으므로 True를 리턴하고, 같지 않다면 value가 작은 경우에는 left의 값을 current_node로, 큰 경우에는 right의 값을 current_node로 해서 반복문을 실행한다.
+* current_node가 비어있다면 value의 값을 가진 노드가 생성되지 않은 것이므로 반복문을 빠져나와서 False를 반환한다.
+
+### 이진 트리 삭제
+* 이진 트리의 값을 삭제하는 상황에서는 경우가 매우 많으므로, 나누어서 이해해야 한다.
+* Leaf Node를 삭제하는 경우에는 삭제할 Node의 Parent Node가 삭제할 Node를 가리키지 않도록 해야 한다.
+* Child Node를 삭제하는 경우에는 삭제할 Node의 Parent Node가 삭제할 Node의 Chile Node를 가리키도록 해야 한다.
+* Child Node가 두 개인 Node를 삭제하는 경우는 가장 복잡한 경우로 두가지 방식으로 나뉜다.
+	1. 삭제할 Node의 오른쪽 자식 중, 가장 작은 값을 삭제할 Node의 Parent Node가 가리키도록 하는 경우
+	2. 삭제할 Node의 왼쪽 자식 중, 가장 큰 값을 삭제할 Node의 Parent Node가 가리키도록 하는 경우
+* 나는 1번 방식을 사용할 것인데 그럴 경우에는 먼저 삭제할 Node의 오른쪽 자식을 선택한 후 가장 작은 값인 오른쪽 자식의 가장 왼쪽에 있는 Node를 선택한다.
+* 해당 Node를 삭제할 Node의 Parent Node의 왼쪽 Branch가 가리키게 한다.
+* 해당 Node의 왼쪽 Branch가 삭제할 Node의 왼쪽 Child Node를 가리키게 한다.
+* 해당 Node의 오른쪽 Branch가 삭제할 Node의 오른쪽 Child Node를 가리키게 한다.
+* 만약 해당 Node가 오른쪽 Child Node를 가지고 있었을 경우에는, 해당 Node의 본래 Parent Node의 왼쪽 Branch가 해당 오른쪽 Child Node를 가리키게 한다.
+
+### 이진 탐색 트리의 시간 복잡도와 단점
+* n개의 노드를 가진다면, 트리의 높이는 logn에 가까우므로, 시간 복잡도는 O(logn)
+* 한번 실행시마다, 50%의 실행할 수도 있는 명령을 제거한다는 의미
+* 평균 시간 복잡도는 O(logn)이지만, 이는 트리가 균형잡혀 있을 때의 평균 시간복잡도이며, 최악의 경우 링크드 리스트와 동일한 성능을 보여줌 O(n) 
+
 
 
 
