--- a/_posts/2021-06-21-0621-0627.md
+++ b/_posts/2021-06-21-0621-0627.md
@@ -488,7 +488,166 @@ class NodeMgmt:
 * 한번 실행시마다, 50%의 실행할 수도 있는 명령을 제거한다는 의미
 * 평균 시간 복잡도는 O(logn)이지만, 이는 트리가 균형잡혀 있을 때의 평균 시간복잡도이며, 최악의 경우 링크드 리스트와 동일한 성능을 보여줌 O(n) 
 
+## 0625 TIL
+# 테스트 2차 준비 10일차
 
 
+# 힙
+* 데이터에서 최대값과 최소값을 빠르게 찾기 위해 고안된 완전 이진 트리
+	* 완전 이진 트리 : 노드를 삽입할 때 최하단 왼쪽 노드부터 차례대로 삽입하는 트리
+
+### 힙을 사용하는 이유
+* 배열에 데이터를 넣고, 최대값과 최소값을 찾으려면 O(n)이 걸림
+* 이에 반해, 힙에 데이터를 넣고 최대값과 최소값을 찾으면, O(logn)이 걸림
+* 우선순위 큐와 같이 최대값 또는 최소값을 빠르게 찾아야 하는 자료구조 및 알고리즘 구현 등에 활용
+
+## 힙 구조
+* 힙은 최대값을 구하기 위한 구조와, 최소값을 구하기 위한 구조로 분류
+* 힙은 다음과 같이 두 가지 조건을 가지고 있는 자료구조이다.
+	1. 각 노드의 값은 해당 노드의 자식 노드가 가진 값보다 크거나 같다. (최대 힙의 경우)
+	2. 완전 이진 트리 형태를 가짐
+
+###   힙과 이진 탐색 트리의 공통점과 차이점
+* 공통점 : 힙과 이진 탐색 트리는 모두 이진 트리
+* 차이점:
+	* 힙은 각 노드의 값이 자식 노드보다 크거나 같음 (최대 힙)
+	* 이진 탐색 트리는 왼쪽 자식 노드의 값이 가장 작고, 그 다음 부모 노드, 그 다음 오른쪽 자식 노드 값이 가장 큼
+	* 힙은 이진 탐색 트리의 조건인 자식 노드에서 왼쪽, 오른쪽의 값 크기를 비교하지 않음
+* 이진 탐색 트리는 탐색을 위한 구조, 힙은 최대/최소값 검색을 위한 구조 중 하나로 이해하면 됨
+
+## 힙 동작
+* 힙은 완전 이진 트리이므로, 삽입할 노드는 기본적으로 왼쪽 최하단부 노드부터 채워지는 형태로 삽입
+
+### 힙에 데이터 삽입 - 삽입할 데이터가 힙의 데이터보다 클 경우
+* 먼저 삽입된 데이터는 완전 이진 트리 구조에 맞추어, 최하단부 왼쪽 노드부터 채워짐
+* 채워진 노드 위치에서, 부모 노드보다 값이 클 경우, 부모 노드와 위치를 바꿔주는 작업 반복(swap)
+
+### 힙 데이터 삭제 
+* 보통 삭제는 최상단 루트 노드를 삭제
+* 상단의 데이터 삭제 시, 가장 최하단부 왼쪽에 위치한 노드를 루트 노드로 이동
+* 루트 노드의 값이 child node 보다 작을 경우, 루트 노드의 child node 중 가장 큰 값을 가진 노드와 루트 노드 위치를 바꿔주는 작업을 반복
+
+## 힙 구현
+### 힙과 배열
+* 일반적으로 힙 구현 시 배열 자료구조를 활용
+* 배열은 인덱스가 0번부터 시작하지만, 힙 구현의 편의를 위해 루트 노드 인덱스 번호를 1로 지정하면, 구현이 좀 더 수월
+	* 부모 노드 인덱스 번호 = 자식 노드 인덱스 번호 // 2
+	* 왼쪽 자식 노드 인덱스 번호 = 부모 노드 인덱스 번호 * 2
+	* 오른쪽 자식 노드 인덱스 번호 = 부모 노드 인덱스 번호 * 2 + 1
+
+### 힙 클래스 구현
+```python
+class Heap:
+    def __init__(self, data):
+        self.heap_array = list()
+        self.heap_array.append(None)
+        self.heap_array.append(data)
+
+
+    def move_up(self, inserted_idx):
+            if inserted_idx <= 1:
+                return False
+
+            parent_idx = inserted_idx // 2
+            if self.heap_array[inserted_idx] > self.heap_array[parent_idx]:
+                return True
+            else:
+                return False
+
+    def insert(self, data):
+        if len(self.heap_array) == 0:
+            self.heap_array.append(None)
+            self.heap_array.append(data)
+            return True
+        
+        self.heap_array.append(data)
+        
+        inserted_idx = len(self.heap_array) - 1
+        
+        while self.move_up(inserted_idx):
+            parent_idx = inserted_idx // 2
+            self.heap_array[inserted_idx], self.heap_array[parent_idx] = self.heap_array[parent_idx], self.heap_array[inserted_idx]
+            inserted_idx = parent_idx
+        
+        return True
+```
+* 기본적으로 heap_array 변수에 리스트를 생성하여 0번째 인덱스에는 None을 삽입한다.
+	* 인덱스 번호가 1번부터 시작하도록 설정
+* insert 메소드는 힙에 데이터를 삽입하는 메소드이다.
+* 힙 배열 길이가 0이면 제대로 생성되지 않은 것이므로, 0번 인덱스에 None을 삽입하고, data를 1번 인덱스에 삽입한다.
+* 0이 아니면 append 메서드를 사용해서 heap_array에 데이터를 삽입한다.
+* 삽입 후 데이터의 위치를 변경해주기 위해서 삽입된 데이터의 인덱스를 변수에 저장하고 move_up 메소드에서 True를 반환하는 동안 반복문을 실행시킨다.
+* move_up 메소드는 해당 인덱스가 루트를 가리키거나 해당 인덱스의 값이 부모 인덱스의 값보다 작은 경우에만 False를 반환한다.
+	* 이러한 경우에는 위치를 조정할 필요가 없기 때문에 반복문을 종료한다.
+* 해당 인덱스 값이 부모 인덱스 값보다 큰 경우에는 해당 인덱스로 부모 인덱스를 계산해서 서로 위치를 바꾼다. 그리고 인덱스에 부모 인덱스 값을 설정해서 다시 반복문을 돌린다.
+
+### 힙에 데이터 삭제 구현
+* 보통 삭제는 최상단 노드를 삭제하는 것이 일반적이다.
+
+```python
+def move_down(self, popped_idx):
+    left_child_popped_idx = popped_idx * 2
+    right_child_popped_idx = popped_idx * 2 + 1
+
+    # case1: 왼쪽 자식 노드도 없을 때
+    if left_child_popped_idx >= len(self.heap_array):
+        return False
+    # case2: 오른쪽 자식 노드만 없을 때
+    elif right_child_popped_idx >= len(self.heap_array):
+        if self.heap_array[popped_idx] < self.heap_array[left_child_popped_idx]:
+            return True
+        else:
+            return False
+    # case3: 왼쪽, 오른쪽 자식 노드 모두 있을 때
+    else:
+        if self.heap_array[left_child_popped_idx] > self.heap_array[right_child_popped_idx]:
+            if self.heap_array[popped_idx] < self.heap_array[left_child_popped_idx]:
+                return True
+            else:
+                return False
+        else:
+            if self.heap_array[popped_idx] < self.heap_array[right_child_popped_idx]:
+                return True
+            else:
+                return False
+
+def pop(self):
+    if len(self.heap_array) <= 1:
+        return None
+
+    returned_data = self.heap_array[1]
+    self.heap_array[1] = self.heap_array[-1]
+    del self.heap_array[-1]
+    popped_idx = 1
+
+    while self.move_down(popped_idx):
+        left_child_popped_idx = popped_idx * 2
+        right_child_popped_idx = popped_idx * 2 + 1
+
+        # case2: 오른쪽 자식 노드만 없을 때
+        if right_child_popped_idx >= len(self.heap_array):
+            if self.heap_array[popped_idx] < self.heap_array[left_child_popped_idx]:
+                self.heap_array[popped_idx], self.heap_array[left_child_popped_idx] = self.heap_array[
+                    left_child_popped_idx], self.heap_array[popped_idx]
+                popped_idx = left_child_popped_idx
+        # case3: 왼쪽, 오른쪽 자식 노드 모두 있을 때
+        else:
+            if self.heap_array[left_child_popped_idx] > self.heap_array[right_child_popped_idx]:
+                if self.heap_array[popped_idx] < self.heap_array[left_child_popped_idx]:
+                    self.heap_array[popped_idx], self.heap_array[left_child_popped_idx] = self.heap_array[
+                        left_child_popped_idx], self.heap_array[popped_idx]
+                    popped_idx = left_child_popped_idx
+            else:
+                if self.heap_array[popped_idx] < self.heap_array[right_child_popped_idx]:
+                    self.heap_array[popped_idx], self.heap_array[right_child_popped_idx] = self.heap_array[
+                        right_child_popped_idx], self.heap_array[popped_idx]
+                    popped_idx = right_child_popped_idx
+
+    return returned_data
+```
+* pop 메서드는 루트 노드의 값을 반환하는 메서드이다.
+* 반환한 데이터 변수에 1번 인덱스에 존재하는 최대값을 넣고, 맨 마지막에 삽입한 값을 최상단으로 올린다.
+* move_down 메서드는 최상단으로 올린 값을 자식 노드의 값과 비교하여 내려야 하는지 참, 거짓을 반환하는 메서드이다.
+* 해당 노드의 자식노드 수를 기준으로 케이스를 나눠서 구현한다.
 
 
