--- a/_posts/2021-06-21-0621-0627.md
+++ b/_posts/2021-06-21-0621-0627.md
@@ -650,4 +650,8 @@ def pop(self):
 * move_down 메서드는 최상단으로 올린 값을 자식 노드의 값과 비교하여 내려야 하는지 참, 거짓을 반환하는 메서드이다.
 * 해당 노드의 자식노드 수를 기준으로 케이스를 나눠서 구현한다.
 
-
+## 0626 ~ 0627 TIL
+2주간의 코딩 테스트를 마무리 했다.  
+열심히 했지만 처음 접하는 파이썬이라는 언어로 자료구조 시험을 보는 것을 2주만에 하려니 쉽지 않았다.  
+아직 결과가 나오지 않았지만 되든 안되든 좋은 경험이었다고 생각한다.  
+많이 부족함을 느끼고 다시 열심히 공부해야겠다고 다짐했다.
