--- a/_posts/2021-06-28-0628-0704.md
+++ b/_posts/2021-06-28-0628-0704.md
@@ -15,3 +15,10 @@ category: TIL
 예전에 영국 어학연수 때 치룬 면접을 제외하고는 내 인생에서 처음으로 제대로 도전해보는 면접이다.  
 처음이고 시간도 약 하루하고 절반밖에 남지 않아서 촉박하다.  
 남은 기간동안 최선을 다해서 후회없이 부딪혀 봐야겠다.
+
+## 0622 ~ 0623
+이틀 간 면접 준비를 해서 면접을 치뤘다.  
+처음으로 제대로 준비한 면접이다보니 엄청 떨려서 내 마음껏 표현을 하지 못한 것 같다.  
+제대로 간절함을 나타내지 못해서 아쉬움이 정말 크다.  
+현실적으로 봤을 때 떨어질 확률이 높다고 생각한다.  
+합격하지 못하더라도 다시 새로운 마음가짐으로 시작해야겠다.  
