--- a/_posts/2021-06-28-0628-0704.md
+++ b/_posts/2021-06-28-0628-0704.md
@@ -22,3 +22,9 @@ category: TIL
 제대로 간절함을 나타내지 못해서 아쉬움이 정말 크다.  
 현실적으로 봤을 때 떨어질 확률이 높다고 생각한다.  
 합격하지 못하더라도 다시 새로운 마음가짐으로 시작해야겠다.  
+
+## 0701
+새로운 달의 시작이다.  
+오늘은 지금까지 네카라쿠배 패스트캠퍼스를 준비하느라 휴식하는 기간을 가졌다.  
+결과가 나올 떄까지 코딩테스트를 준비해야겠다.  
+우선은 파이썬을 사용해서 코딩테스트를 준비해봐야겠다.
