--- a/_posts/2021-06-28-0628-0704.md
+++ b/_posts/2021-06-28-0628-0704.md
@@ -28,3 +28,7 @@ category: TIL
 오늘은 지금까지 네카라쿠배 패스트캠퍼스를 준비하느라 휴식하는 기간을 가졌다.  
 결과가 나올 떄까지 코딩테스트를 준비해야겠다.  
 우선은 파이썬을 사용해서 코딩테스트를 준비해봐야겠다.
+
+## 0702 ~ 0704
+이번 결과 발표에 따라 앞으로 공부 방향이 완전히 달라지기 때문에 생각이 많아져 학업이 손에 잡히지 않았다.  
+결과 발표까지는 휴식기를 가질 생각이다.
