--- a/_posts/2021-07-06-0705-0711.md
+++ b/_posts/2021-07-06-0705-0711.md
@@ -18,3 +18,12 @@ category: TIL
 한 달간 노력한 결과를 받은거 같아서 감격적인 순간이었다.  
 이번 기회를 통해 정말 네카라쿠배에 취업하고자 하는 의지를 굳건하게 다진다.  
 이번 주에 마지막으로 친구들을 만나고, 다음 주부터 제대로 시작해서 목표하는 기업을 꼭 가고 말겠다.
+
+## 0706 ~ 0711
+7개월 넘게 계속 TIL을 작성하는 습관을 들이면서, 이전에 비해 많이 성장한 개발자가 되었다.  
+이번 주는 쉬어가는 주간으로 다음 주부터 있을 네카라쿠배 교육 과정 이전에 보지 못했던 친구들도 만나고, 사람들과 시간을 보냈다.  
+아예 푹 쉬어버리니 오히려 충전이 된 것 같고, 미련없이 다음주부터 앞만 보고 달려갈 수 있을 것 같다.  
+내일부터 제대로 시작해서 이제는 정말 네카라쿠배를 목표로 공부하고자 한다.  
+기대되는 마음도 있고, 정말 힘든 길일게 틀림없기에 걱정되는 마음도 있다.  
+하지만 최선을 다한다면 원하는 바를 꼭 이룰 수 있다고 생각한다.  
+내년 1월에 발전한 나의 모습을 상상하며 최선을 다해 앞으로만 나아가는 개발자가 되어야겠다.
