--- a/_posts/2021-07-13-0712-0718.md
+++ b/_posts/2021-07-13-0712-0718.md
@@ -1390,4 +1390,58 @@ const hello = (name) => {
 * 화살표 함수 내부의 this랑 function 함수 내부의 this는 의미가 다르다.
 
 
+## 0717
+# BEM 방식
+사전 과제를 하면서 css 클래스네임 작명을 어떻게 하면 좋을까 고민하다가 유명한 방법인 BEM 방식을 학습하고 사전과제에 적용해보기로 했다.
+
+## BEM의 기본 구조
+* BEM은 Block, Element, Modifier 세 가지로 구성된 이름을 짓는 것을 뜻한다.
+* 각각 `__`와 `--`로 구분
+
+```css
+.header__navigation--navi-text {
+	color: red;
+```
+* BEM은 기본적으로 ID를 사용하지 않으며, class만을 사용한다.
+* '어떻게 보이는가'가 아닌 '어떤 목적인가'에 따라 이름을 짓는다.
+	* ex) 에러 메시지를 띄우는 p 태그에는 `.red`가 아닌 `.error`라는 이름을 줘야한다.
+* 이름을 연결할 때는 하이픈 하나만 써서 연결한다.
+
+### Block
+* 재사용 가능한 기능적으로 독립적인 페이지 컴포넌트
+* 블럭은 블럭을 감쌀 수 있다.
+
+### Element
+* 블럭을 구성하는 단위
+* 블럭은 독립적인 형태인 반면, 엘리면트는 의존적인 형태. 
+* 자신이 속한 블럭 내에서만 의미를 가지기 때문에 블럭 안에서 떼어다 다른 데 쓸 수 없다.
+
+```html
+<form class="search-form">
+	<input class="search-form__input"/>
+	<button class="search-form__button">Search</button>
+</form>
+```
+* 위 예시에서 `search-form`은 블럭이고 `.search-form__input`과 `.search-form__button`은 엘리먼트이다.
+* `search-form`이란 블럭은 떼어내서 다른 곳에서 재사용 할 수 있지만, 내부의 input과 button은 `search-form`안에서만 존재 의미가 있는 엘리먼트이다.
+* 엘리먼트또한 중첩이 가능하다.
+	* ex)  `.block > .block__element1 > .block__element2`
+	* `.block__element2`를 `.block__element1`의 하위 엘리먼트로 보지 않고 둘 다 똑같이 `.block`의 엘리먼트로 취급
+
+### Modifier
+* 블럭이나 엘리먼트의 속성
+* 생긴게 다르거나, 다르게 동작하는 블럭이나 엘리먼트를 만들 때 사용
+
+```css
+<ul class="tab">
+	<li class="tab__item tab__item--focused">탭 01</li>
+	<li class="tab__item">탭 02</li>
+	<li class="tab__item">탭 03</li>
+</ul>
+```
+* `--focused`가 수식어에 해당
+* 값이 true라고 가정하고 사용하는 불리언 타입
+* 키-밸류 타입도 있다.
+	* ex) `color-gray`, `theme-normal`
+
 
