--- a/_posts/2021-07-20-0719-0725.md
+++ b/_posts/2021-07-20-0719-0725.md
@@ -3,7 +3,7 @@ title: "0719-0725"
 tag: TIL
 category: TIL
 ---
-## 0712
+## 0719
 # 6일 차 JS 12 ~ 21회차 강의 정리
 
 
@@ -191,5 +191,197 @@ console.log(Object.values(dog));
 * continue를 반복문 내에서 만나게 되면 바로 증감식으로 넘어가서 다음 루프를 돌게 된다.
 * break 문을 만나게 되면 반복문이 아예 끝난다.
 
+## 0720
+
+# 7일 차 JS 22 ~ 29회차 강의 정리
+## 배열 내장함수
+### forEach
+* 배열의 각 요소들에서 특정 동작을 수행한다.
+* 매개변수로 콜백함수를 받는다.
+* 배열의 값 뿐만 아니라 인덱스에도 접근할 수 있다.
+
+```javascript
+const heroes = ['아이언맨', '캡틴 아메리카', '토르', '닥터 스트레인지'];
+
+heroes.forEach((hero, index) => {
+    console.log(hero, index);
+})
+
+
+// 결괏값
+아이언맨 0
+캡틴 아메리카 1
+토르 2
+닥터 스트레인지 3
+```
+
+### map
+* 배열 안의 원소를 변환할 때 사용
+
+```javascript
+const items = [
+    {
+        id: 1,
+        text: 'hello'
+    },
+    {
+        id: 2,
+        text: 'bye'
+    }
+];
+
+const texts = items.map((item) => item.text);
+console.log(texts);
+
+// 결괏값
+[ 'hello', 'bye' ]
+```
+
+### indexOf
+* 해당하는 값이 배열 안에서 첫 번째로 발견된 인덱스를 반환한다.
+* 값을 배열에서 찾지 못하면 -1을 반환
+
+```javascript
+const superheroes = ['아이언맨', '캡틴 아메리카', '토르', '닥터 스트레인지'];
+const index = superheroes.indexOf('토르');
+console.log(index);
+
+// 결괏값
+2
+```
+
+### findIndex
+* 배열 안에 있는 값들이 객체이거나, 특정 조건을 확인해야 하는 경우 사용
+
+```javascript
+const todos = [
+    {
+        id: 1,
+        text: '자바스크립트 입문',
+        done: true
+    },
+    {
+        id: 2,
+        text: '함수 배우기',
+        done: true
+    },
+    {
+        id: 3,
+        text: '객체와 배열 배우기',
+        done: true
+    },
+    {
+        id: 4,
+        text: '배열 내장함수 배우기',
+        done: false
+    }
+];
+ 
+const index = todos.findIndex(todo => todo.id === 3);
+console.log(index);
+
+// 결괏값
+2
+```
+* `findIndex()`는 인덱스를 반환해준다면, `find()`는 찾은 객체 자체를 반환해준다.
+
+### filter
+* 특정 배열에서 특정 조건을 만족하는 원소들만 추출해서 새로운 배열을 만들 때 사용
+
+```javascript
+const taskNotDone = todos.filter(todo => !todo.done);
+
+console.log(taskNotDone);
+
+// 결괏값
+[ { id: 4, text: '배열 내장함수 배우기', done: false } ]
+```
+* 기존의 배열은 건드리지 않고 새로운 배열을 생성한다.
+
+### splice, slice
+* splice는 매개변수로 받는 인덱스에 해당하는 값을 삭제한다.
+* 첫 번째 매개변수에는 삭제하고자 하는 인덱스, 두 번째 매개변수에는 그 인덱스부터 시작하여 몇개를 지울 것인지를 받는다.
+* splice의 결괏값으로 삭제한 배열을 반환한다.
+* slice와 splice의 차이점은 slice는 기존 배열은 건드리지 않고, 잘라낸 배열만 반환한다는 것이다.
+
+```javascript
+const numbers = [10, 20, 30, 40];
+const index = numbers.indexOf(30);
+console.log(index);
+
+const spliced = numbers.splice(index, 1);
+console.log(numbers);
+console.log(spliced);
+
+// 결괏값
+2
+[ 10, 20, 40 ]
+[ 30 ]
+```
+
+### shift, unshift, pop, push
+* shift는 배열에서 가장 앞에 있는 원소를 배열에서 꺼내고 반환해준다.
+* pop은 배열에서 가장 뒤에 있는 원소를 배열에서 꺼내고 반환해준다.
+* unshift는 배열에서 가장 앞에 값을 삽입한다.
+* push는 배열의 맨 뒤에 값을 삽입한다.
+
+### concat
+* 기존의 배열을 건드리지 않고, 두 배열을 합쳐서 새로운 배열을 반환한다.
+
+```javascript
+const arr1 = [1, 2, 3];
+const arr2 = [4, 5, 6];
+
+const concated = arr1.concat(arr2);
+console.log(concated);
+
+// 결괏값
+[ 1, 2, 3, 4, 5, 6 ]
+```
+
+### join
+* 배열을 문자열로 변환해준다.
+* separate를 매개변수로 받는다. 기본 값은 ,
+
+```javascript
+const array = [1, 2, 3, 4, 5];
+
+console.log(array.join());
+
+// 결괏값
+1,2,3,4,5
+```
+
+### reduce
+* 배열 안의 모든 값들을 사용해서 연산해야 할 때 사용
+
+```javascript
+const numbers = [1, 2, 3, 4, 5];
+
+const sum = numbers.reduce((acc, current) => acc + current, 0);
+console.log(sum);
+```
+* 첫 번째 매개변수에는 함수를 넣게 되는데, 그 함수는 기본적으로 값을 저장할 accumulator과 현재 배열의 값을 가지는 current를 갖는다.
+* 두 번째 매개변수에는 값을 저장할 accumulator의 초기값을 설정한다.
+* acc를 초기화하고, 함수에서 배열의 값과 필요한 연산을 한 뒤 다시 그 값을 acc에 저장하는 것을 반복한다.
+* 첫 번째 매개변수에서 acc과 current 뒤에 배열의 index 값과 자기 자신 배열을 가리키는 array를 가져올수도 있다.
+
+```javascript
+const alphabets = ['a', 'a', 'a', 'b', 'c', 'c', 'd', 'e'];
+const counts = alphabets.reduce((acc, current) => {
+    if (acc[current]) {
+        acc[current] += 1;
+    } else {
+        acc[current] = 1;
+    }
+    return acc;
+}, {})
+
+console.log(counts);
+
+// 결괏값
+{ a: 3, b: 1, c: 2, d: 1, e: 1 }
+```
+* 위와 같이 알파벳의 개수를 구할수도 있다.
 
 
