--- a/_posts/2021-07-20-0719-0725.md
+++ b/_posts/2021-07-20-0719-0725.md
@@ -384,4 +384,386 @@ console.log(counts);
 ```
 * 위와 같이 알파벳의 개수를 구할수도 있다.
 
+---
 
+## 0721
+# 8일 차 JS 1 ~ 6회차 강의 정리 및 알고리즘
+오늘부터 자바스크립트 온라인 강의와 더불어 알고리즘 과제를 해결하기로 했다.
+난이도는 기업 코딩테스트 기준으로 봤을 때는 상당히 쉬운 문제들이지만, 문제를 풀면서 새로 알게된 개념이나 유용한 코딩을 간단하게나마 정리해보고자 한다.
+
+## 알고리즘
+### 중복 문자 제거
+![01-01](../../assets/images/algorithm/01/01.png)
+
+```javascript
+function solution(str) {
+    let answer = '';
+    for (let i = 0; i < str.length; i++) {
+        if (answer.indexOf(str.charAt(i)) === -1) {
+            answer += str.charAt(i);
+        }
+    }
+    return answer;
+}
+console.log(solution('ksekkset'));
+```
+* 주어진 문자열을 단어별로 반복문을 돌려서 빈 문자열에 해당하는 단어가 있는지 확인하여 없으면 해당 단어를 추가하여 결과를 출력했다.
+
+### 회문 문자열
+![01-02](../../assets/images/algorithm/01/02.png)
+
+```javascript
+function solution(str) {
+    let answer = '';
+    const lowerStr = str.toLowerCase();
+    const reversedStr = lowerStr.split('').reverse().join('');
+
+    if (lowerStr === reversedStr) {
+        answer = 'YES';
+    } else {
+        answer = 'NO';
+    }
+    return answer;
+}
+
+console.log(solution('gooG'));
+console.log(solution('gattBG'));
+```
+1. 우선 대소문자를 구분하지 않기 위해서 문자열을 소문자로 통일하기 위해 변환하였다.
+2. `split('').reverse().join('')`를 사용해 문자열을 배열로 바꾸고, 배열 함수로 순서를 거꾸로 뒤집어서 다시 문자열로 만들었다.
+3. 기존 문자열과 뒤집은 문자열을 비교하여 결과를 반환하였다.
+
+### 뒤집은 소수
+![01-03](../../assets/images/algorithm/01/03.png)
+
+```javascript
+function solution(array) {
+    const answer = [];
+
+    array.forEach(num => {
+        const reversed = parseInt(num.toString().split('').reverse().join(''));
+
+        if (reversed === 1) {
+            return;
+        }
+
+        for (let i = 2; i < reversed; i++) {
+            if (reversed % i === 0) {
+                return;
+            }
+        }
+
+        answer.push(reversed);
+    })
+
+    return answer;
+}
+
+console.log(solution([32, 55, 62, 20, 250, 370, 200, 30, 100]));
+```
+1. 숫자 배열을 반복문을 사용해서 문자열로 바꾼 뒤, `split('').reverse().join('')`으로 뒤집고 다시 숫자형으로 변하게 해서 첫 자리부터 연속된 0을 무시하면서 수를 뒤집었다.
+2. 뒤집은 수가 1이면 소수가 아니기에 return 시켰고, 2부터 자기 자신 수까지 나누어 떨어지는 수가 있으면 소수가 아니기에 return 시켰다. 그 외에는 모두 정답 배열에 push 시켜서 결과를 도출하였다.
+
+### 괄호문자제거
+![01-04](../../assets/images/algorithm/01/04.png)
+
+```javascript
+function solution(str) {
+    let answer = '';
+    let stack = [];
+
+    let array = str.split('');
+    array.forEach((element) => {
+        if (element === ')') {
+            stack.splice(stack.lastIndexOf('('));
+        } else {
+            stack.push(element);
+        }
+    })
+    answer = stack.join('');
+    return answer;
+}
+
+console.log(solution('(A(BC)D)EF(G(H)(IJ)K)LM(N)'));
+```
+1. `forEach`로 배열을 돌리기 위해 문자열을 배열로 변환하였다.
+2. 반복문을 사용해서 요소가 '('나 일반 문자라면 빈 스택에 push 하였고, ')'라면 뒤에서부터 '('의 인덱스를 찾아서 해당 인덱스부터 맨 뒤까지의 모든 요소를 제거하였다.
+3. 배열을 `join`함수로 문자열로 변환하여 결과를 출력하였다.
+
+### 재귀함수를 이용한 이진수 출력
+![01-05](../../assets/images/algorithm/01/05.png)
+
+```javascript
+function solution(num) {
+    let answer = '';
+    let devided = parseInt(num / 2);
+
+    if (devided === 1) {
+        answer += devided;
+        answer += num % 2;
+    } else {
+        answer = solution(devided);
+        answer += num % 2;
+    }
+
+    return answer;
+}
+
+console.log(solution(11));
+console.log(solution(20));
+```
+1. 받아온 숫자를 2로 나눠서 몫을 구한 값을 변수에 담았다.
+2. 몫이 1이면 더 이상 나눌 필요가 없기에 빈 문자열 answer에 몫과 나머지를 순서대로 더했다.
+3. 몫이 1이 아니라면 계속 나눠야 하기 때문에 나올 때까지 재귀 호출하여 반환된 값을 answer에 저장했다.
+4. 순차적으로 호출이 마친 뒤에 해당 블록의 나머지 값을 문자열에 순차적으로 더해서 재귀호출을 사용해 이진수를 구했다.
+
+* 자바에서는 몫을 구할 때 두 수 모두 자연수이면 결과 값도 몫만 도출되었는데, 자바스크립트에서는 소수로 구해진다는 사실을 처음 알게 되었다. 이 점을 유의해서 코딩해야겠다고 생각했다.
+* 재귀호출은 쉬우면서도 머리가 너무 아프다. 이 부분을 잘 정리해서 더 어려운 문제를 맞닥트렸을 때, 자유자재로 사용할 수 있게 실력을 키워야겠다.
+
+## JS 강의 정리
+### 삼항 연산자
+`condition ? true : false`
+
+* `if ~ else`문의 조금 더 편하게 쓰는 문법이라고 할 수 있다.
+* condition 내의 값이 true 이면 ? 뒤의 문장이 실행되고, false이면 : 뒤의 문장이 실행된다.
+* 삼항 연잔자를 연속으로 중첩해서 사용하는 것은 가독성이 떨어질 수 있으므로, 그런 상황에서는 if 문으로 대체한다.
+
+### Truthy와 Falsy
+* Truthy는 True 같은 것. Falsy는 False 같은 것.
+* Falsy한 값의 대표적인 5개의 값
+	* undefined
+	* null
+	* 0
+	* ''
+	* NaN
+* 그 외에는 모두 Truthy한 값
+* 조건문에서 잘 활용할 수 있다.
+
+```javascript
+console.log(!undefined);
+console.log(!0);
+console.log(!null);
+console.log(!'');
+console.log(!NaN);
+
+// 결괏값
+true
+true
+true
+true
+true
+```
+* 예를 들어 변수가 Falsy한 값일 때, 방어 코드를 작성하는 곳에 활용할 수 있다.
+* 또는 변수 값이 Truthy한 값일 때만 조건문 블럭을 실행하는 방식으로도 사용할 수 있다.
+
+### 단축 평가 논리 계산법
+* 논리 연산자를 사용해서 코드를 더 짧게 쓰는 방법
+
+```javascript
+console.log(true && 'hello');
+console.log(false && 'hello');
+console.log('hello' && 'bye');
+console.log(null && 'hello');
+console.log(undefined && 'hello');
+console.log('' && 'hello');
+console.log(1 && 'hello');
+
+// 결괏값
+hello
+false
+bye
+null
+undefined
+
+hello
+```
+* `&&` 연산자는 앞에 있는 값이 Truthy 한 값이면 뒤의 값이 나오고, 앞에 있는 값이 Falsy한 값이면 앞의 값이 나온다.
+* 특정 값이 유효할 때만 특정 값을 조회해야 하는 상황
+* `||` 연산자는 앞에 있는 값이 Truthy 한 값이면 앞의 값이 나오고, 앞의 값이 Falsy한 값이면 뒤의 값이 나온다.
+* 어떤 값이 없을 때, 값을 지정해 줄 때 사용하면 유용하다.
+
+### 함수의 기본 파라미터
+* 함수를 호출할 때 인자를 주지 않았을 경우에 기본 파라미터 값을 설정할 수 있다.
+
+```javascript
+function calculate(r = 1) {
+    return Math.PI * r * r;
+}
+
+console.log(calculate());
+
+// 결괏값
+3.141592653589793
+```
+* 매개변수에 `=` 기호 우측에 값을 입력하면 그것이 해당 매개변수의 값을 전달받지 못했을 때 기본값이 된다.
+* 화살표 함수에서도 같은 방식으로 기본 파라미터를 지정할 수 있다.
+
+### 조건문 더 스마트하게 쓰기
+#### 특정 값이 여러 값 중 하나인지 확인해야 하는 상황
+```javascript
+function isAnimal(text) {
+    return (
+        text === '고양이' || text === '개' || text == '거북이' || text === '너구리'
+    );
+}
+
+console.log(isAnimal('개'));
+console.log(isAnimal('노트북'));
+```
+
+* 비교하고자 하는 값을 배열로 선언해서 내장함수 includes로 보기 좋게 작성할 수 있다.
+
+```javascript
+const isAnimal = (text) => ['고양이', '개', '거북이', '너구리'].includes(text);
+```
+
+#### 주어진 값에 따라 다른 결과물을 반환해야 하는 상황
+```javascript
+function getSound(animal) {
+    if (animal === '개') return '멍멍!';
+    if (animal === '고양이') return '야옹~';
+    if (animal === '참새') return '짹짹';
+    if (animal === '비둘기') return '구구 구 구';
+    return '...?';
+}
+
+console.log(getSound('개'));
+console.log(getSound('비둘기'));
+console.log(getSound('인간'));
+```
+
+* `switch ~case`문으로 바꿀수도 있으나 그렇게 했을 경우는 위의 if문과 큰 차이가 없다.
+* 객체를 활용해서 더 깔끔하게 구현할 수 있다.
+
+```javascript
+function getSound(animal) {
+    const sounds = {
+        개: '멍멍!',
+        고양이: '야옹~',
+        참새: '짹짹',
+        비둘기: '구구 구 구'
+    };
+    return sounds[animal] || '...?';
+}
+
+console.log(getSound('개'));
+console.log(getSound('비둘기'));
+console.log(getSound('인간'));
+```
+* 객체의 키 값과 단축 평가 논리 계산법을 이용해서 깔끔하게 구현하였다.
+
+### 주어진 값에 따라 다른 결과물을 실행해야 하는 상황
+* 위의 주어진 값에 따라 다른 결과물을 반환해야 하는 상황과 비슷하다.
+
+```javascript
+function makeSound(animal) {
+    const tasks = {
+        개: () => console.log('멍멍!'),
+        고양이() {
+            console.log('야옹~');
+        },
+        비둘기() {
+            console.log('구구 구 구');
+        } 
+    };
+    if (!tasks[animal]) {
+        console.log('...?');
+        return;
+    }
+    tasks[animal]();
+}
+
+makeSound('개');
+makeSound('비둘기');
+makeSound('인간');
+```
+
+### 비구조화 할당
+* 비구조화 할당에서도 함수의 기본 파라미터와 같은 방식으로 기본 값을 설정할 수 있다.
+
+```javascript
+const object = { a: 1 };
+
+const { a, b = 2 } = object;
+console.log(a);
+console.log(b);
+
+// 결괏값
+1
+2
+```
+
+* 비구조화 할당을 할 때 이름을 바꿀 수도 있다.
+
+```javascript
+const animal = {
+    name: '멍멍이',
+    type: '개'
+};
+
+const { name: nickname } = animal;
+
+console.log(nickname);
+
+// 결괏값
+멍멍이
+```
+* animal이 가지고 있던 name 값이 바뀌는 것은 아니다.
+
+* 배열에서도 비구조화 할당을 사용할 수 있다.
+
+```javascript
+const array = [1, 2];
+
+const [one, two = 2] = array;
+
+console.log(one);
+console.log(two);
+```
+* 배열의 요소를 변수에 쉽게 할당할 수 있는 방법이다.
+* 객체의 비구조화 할당과 동일하게 기본값을 설정할 수 있다.
+
+* 객체 깊숙한 곳에 있는 것을 비구조화 할당할 수 있다.
+
+```javascript
+const deepObject = {
+    state: {
+        information: {
+            name: 'junghoon',
+            languages: ['korean', 'english']
+        }
+    },
+    value: 5
+}
+
+const { name, languages } = deepObject.state.information;
+const { value } = deepObject;
+
+const extracted = {
+    name,
+    languages,
+    value
+};
+console.log(extracted);
+
+// 결괏값
+{ name: 'junghoon', languages: [ 'korean', 'english' ], value: 5 }
+```
+* depth가 다른 값을 비구조화 할당으로 꺼내오는 방법으로는 크게 두 가지 방법이 있는데 첫 번째는 위와 같이 비구조화 할당을 두 번 사용하는 것이다.
+* extracted는 값을 설정하는 것을 생략했는데, 이미 키에 값이 있기 때문에 생략해도 된다.
+
+* 두 번째 방법은 비구조화 할당을 한 번 하면서 여러 값을 다 빼오는 것이다.
+
+```javascript
+const {
+    state: {
+        information: {
+            name, languages
+        }
+    },
+    value
+} = deepObject;
+```
+* 가독성이 떨어진다는 단점이 있다.
+
+0
