--- a/_posts/2021-07-20-0719-0725.md
+++ b/_posts/2021-07-20-0719-0725.md
@@ -766,4 +766,366 @@ const {
 ```
 * 가독성이 떨어진다는 단점이 있다.
 
+## 0722
+# 9일 차 JS 7 ~ 12회차 강의 정리 및 알고리즘
+## 알고리즘
+### 대문자 찾기
+![02-01](../../assets/images/algorithm/02/01.png)
+
+```javascript
+function solution(str) {
+    let answer = 0;
+
+    for (let i = 0; i < str.length; i++) {
+        if(str[i] === str[i].toUpperCase()) {
+            answer++;
+        }
+    }
+
+    return answer;
+}
+
+console.log(solution('KoreaTimeGood'));
+```
+* 문자열을 조회해서 대문자로 변경한 값과 기존의 값이 동일한지 체크하고, 동일한 수를 세서 반환하였다.
+
+### 대소문자 변환
+![02-02](../../assets/images/algorithm/02/02.png)
+
+```javascript
+function solution(str) {
+    let answer = '';
+
+    for(let i = 0; i < str.length; i++) {
+        if (str.charAt(i) === str.charAt(i).toUpperCase()) {
+            answer += str.charAt(i).toLowerCase();
+        } else {
+            answer += str.charAt(i).toUpperCase();
+        }
+    }
+
+    return answer;
+}
+
+console.log(solution('StuDY'));
+console.log(solution('gattBG'));
+```
+* 대문자 찾기 문제와 비슷한 방법을 사용해서, 문자가 대문자라면 소문자로 바꾸고 아니라면 소문자이므로 대문자로 변환해서 반환하였다.
+
+### 가위 바위 보
+![02-03](../../assets/images/algorithm/02/03.png)
+
+```javascript
+function solution(aNum, bNum) {
+    let answer = [];
+
+    for (let i = 0; i < aNum.length; i++) {
+        let info = aNum[i] - bNum[i];
+
+        if (info === 0) answer.push('D');
+        else if (info === 1 || info === -2) answer.push('A');
+        else answer.push('B');
+    }
+
+    return answer;
+}
+
+console.log(solution([2,3,3,1,3], [1,1,2,2,3]));
+```
+* 각 판마다 서로 낸 값을 빼면 이겼을 때의 경우를 계산할 수 있다.
+* 계산한 값을 사용해서 정답 배열에 비기면 D, A가 이기면 A, B가 이기면 B를 push해서 해결하였다.
+
+### 격자판 최대합
+![02-04](../../assets/images/algorithm/02/04.png)
+
+```javascript
+function solution(arr) {
+    let answer = 0;
+    let sum1 = 0;
+    let sum2 = 0;
+    let sum3 = 0;
+    let sum4 = 0;
+    let sumArr = [];
+
+    for (let i = 0; i < arr.length; i++) {
+        for (let j = 0; j < arr[i].length; j++) {
+           sum1 += arr[i][j]; 
+           sum2 += arr[j][i];
+        }
+        sumArr.push(sum1);
+        sumArr.push(sum2);
+        sum1 = 0;
+        sum2 = 0;
+        sum3 += arr[i][i];
+        sum4 += arr[i][arr.length - 1 - i];
+    }
+    sumArr.push(sum3);
+    sumArr.push(sum4);
+
+    sumArr.forEach(element => {
+        if (element >= answer) {
+            answer = element;
+        }
+    });
+
+    return answer;
+}
+
+console.log(solution([[10, 13, 10, 12, 15], [12, 39, 30, 23, 11], [11, 25, 50, 53, 15], [19, 27, 29, 37, 27], [19, 13, 30, 13, 19]]));
+```
+* 꽤 어려웠다고 느꼈던 문제이다. 예전에 자바 공부를 하면서 배열을 2차원 인덱스로 적어 나타내서 규칙을 찾는 방법이 생각나서 그 방법으로 풀었다. 
+* 왠지 sum1~4 까지 변수를 너무 많이 선언한 것은 아닌가 하는 아쉬움이 드는 문제였다.
+* 각 가로, 세로, 대각선의 합을 한 배열에 넣고 그 배열 내에서 최대값을 반환해서 해결했다.
+
+### 문자열 압축
+![02-05](../../assets/images/algorithm/02/05.png)
+
+```javascript
+function solution(str) {
+    let answer = [];
+    let arr = str.split('');
+    let cntArr = {};
+
+    for (let i = 0; i < arr.length; i++) {
+        if (arr[i] !== arr[i + 1]) {
+            answer.push(arr[i]);
+        } else {
+            cntArr[arr[i]] = (cntArr[arr[i]] || 1) + 1;
+        }
+    }
+
+    for (let i = 0; i < answer.length; i++) {
+        if (cntArr[answer[i]]) {
+            answer.splice(i+1, 0, cntArr[answer[i]]);
+        }
+    }
+    answer = answer.join('');
+
+    return answer;
+}
+
+console.log(solution('KKHSSSSSSSE'));
+console.log(solution('KSHHEAAA'));
+```
+* 문자열을 배열로 바꾸고 반복문을 돌려서 현재 인덱스에 위치한 문자가 다음 인덱스에 위치한 문자랑 다르다면 정답 배열에 push하고 같다면 해당 문자가 몇 번이나 나왔는지 저장하는 객체에 담았다.
+* 객체에 담을 때 `+=` 연산자를 사용하려 했는데 NaN이 나왔다.
+	* 숫자로 초기화되지 않은 영역에 `+=`를 사용할 수 없다는 것을 알게 되었고, 최근에 배운 단축 평가 논리 계산법을 이용해서 해결하였다.
+* 정답 배열에 해당 문자의 반복 횟수를 객체에서 꺼내서 삽입하고, 문자열로 다시 변환해서 반환하였다.
+
+### 멘토링
+![02-06](../../assets/images/algorithm/02/06.png)
+
+```javascript
+function solution(nums) {
+    let answer = 0;
+    const testCnt = nums.length;
+    const stuCnt = nums[0].length;
+
+    // 학생의 수가 n명이면 n * n가지의 경우의 멘토, 멘티 수가 나온다.
+    for (let i = 1; i <= stuCnt; i++) {
+        for (let j = 1; j <= stuCnt; j++) {
+            // 멘토랑 멘티가 같은 학생일 수는 없으므로 패스
+            if (i === j) continue;
+            let cnt = 0;
+            for (let k = 0; k < testCnt; k++) {
+                if (nums[k].indexOf(i) < nums[k].indexOf(j)) {
+                    cnt = 1;
+                } else {
+                    cnt = 0;
+                    break;
+                }
+            }
+            answer += cnt;
+        }
+    }
+
+    return answer;
+}
+
+console.log(solution([[3, 4, 1, 2], [4, 3, 2, 1], [3, 1, 4, 2]])); 
+```
+* 가장 어려웠고, 1시간 이상 붙들고 있다가 안되겠어서 다른 곳에서 힌트를 조금 얻어서 겨우 해결했다.
+* 이러한 문제 유형을 브루트 포스(brute force)라고 한다는데, 완전 탐색 알고리즘. 가능한 모든 경우의 수를 탐색하면서 요구조건에 충족하는 결과만 가져오는 유형이라고 한다.
+* 총 3번의 반복문을 이용했는데, 반복문을 2중 이상으로 사용하면 안된다는 고정관념이 있어서 이 문제를 해결하는데 엄청 헤맨 것 같다.
+* 멘토랑 멘티가 짝을 이룰 수 있는 경우의 수를 구하기 위해 2중 반복문을 사용했고, 각 테스트마다 한 번이라도 하위 등수를 받은 적이 있는지를 체크하기 위해 총 3중으로 구현했다. 사실 `indexOf()` 메소드를 사용했기에 4중이라고 할 수 있다.
+* 멘토랑 멘티가 같은 사람일수는 없기에 그런 경우에는 continue로 바로 다음으로 넘어가게 했다.
+
+### LRU (카카오 캐시 문제 변형)
+![02-07](../../assets/images/algorithm/02/07.png)
+
+```javascript
+function solution(nums, s) {
+    cache = Array(s).fill(0);
+
+    for (let i = 0; i < nums.length; i++) {
+        if (cache.indexOf(nums[i]) === -1) {
+            cache.unshift(nums[i]);
+            cache.pop();
+        } else {
+            cache.splice(cache.indexOf(nums[i]), 1);
+            cache.unshift(nums[i]);
+        }
+    }
+    return cache;
+}
+
+console.log(solution([1, 2, 3, 2, 6, 2, 3, 5, 7], 5));
+```
+* 카카오 기출 문제라고 해서 약간 겁부터 냈는데, 생각보다 너무 빠르고 쉽게 풀었다.
+* 스택과 관련된 문제라고 생각해서 우선 캐시라는 변수를 선언하고 그 안에 개수만큼 0을 삽입하였다.
+* 이후 자바스크립트 내장 함수를 사용해서 문제를 해결하였다.
+
+
+## JS 강의 정리
+### spread
+* 이 문법을 사용해서 객체 또는 배열을 펼칠 수 있다.
+* 기존의 객체를 건드리지 않고, 그 객체가 가지고 있는 속성을 그대로 사용하여 새로운 객체를 만들 수 있다.
+
+```javascript
+const slime = {
+  name: '슬라임'
+};
+
+const cuteSlime = {
+  ...slime,
+  attribute: 'cute'
+};
+
+const purpleCuteSlime = {
+  ...cuteSlime,
+  color: 'purple'
+};
+
+// 결괏값
+{ name: '슬라임' }
+{ name: '슬라임', attribute: 'cute' }
+{ name: '슬라임', attribute: 'cute', color: 'purple' }
+```
+
+* spread 연산자는 배열에서도 사용할 수 있다.
+
+```javascript
+const animals = ['개', '고양이', '참새'];
+const anotherAnimals = [...animals, '비둘기'];
+console.log(animals);
+console.log(anotherAnimals);
+
+// 결괏값
+[ '개', '고양이', '참새' ]
+[ '개', '고양이', '참새', '비둘기' ]
+```
+* 기존의 animals를 건드리지 않으면서, 새로운 배열에 animals가 가지고 있는 내용을 모두 집어넣고, '비둘기'라는 항목을 추가적으로 넣었다.
+* 배열에서 spread 연산자를 여러번 사용할 수도 있다.
+
+### rest
+* rest는 객체, 배열, 그리고 함수의 파라미터에서 사용이 가능하다.
+
+#### 객체에서의 rest
+```javascript
+const purpleCuteSlime = {
+  name: '슬라임',
+  attribute: 'cute',
+  color: 'purple'
+};
+
+const { color, ...rest } = purpleCuteSlime;
+console.log(color);
+console.log(rest);
+
+// 결괏값
+purple
+{ name: '슬라임', attribute: 'cute' }
+```
+* rest 안에는 color 값을 제외한 값이 들어있다.
+* rest는 객체와 배열에서는 사용할 때 비구조화 할당 문법과 함께 사용된다.
+* 주로 사용할 때는 rest라는 키워드를 사용하게 되는데, 추출한 값의 이름이 꼭 rest일 필요는 없다.
+
+#### 배열에서의 rest
+```javascript
+const numbers = [0, 1, 2, 3, 4, 5, 6];
+
+const [one, ...rest] = numbers;
+
+console.log(one);
+console.log(rest);
+
+// 결괏값
 0
+[ 1, 2, 3, 4, 5, 6 ]
+```
+* 배열에서도 객체와 비슷하게 사용된다.
+* 다만 주의할 점은 배열에서는 rest가 맨 마지막 요소에 위치해야 한다.
+
+#### 함수 파라미터에서의 rest
+* rest를 함수 파라미터에서도 사용할 수 있다.
+* 함수의 파라미터가 몇 개가 될지 모르는 상황에서 rest 파라미터를 사용하면 매우 유용하다.
+
+```javascript
+function sum(...rest) {
+  return rest.reduce((acc, current) => acc + current, 0);
+}
+
+const result = sum(1, 2, 3, 4, 5, 6);
+console.log(result); // 21
+```
+
+#### 함수 인자와 spread
+* 함수에서 값을 읽을 때, 그 값들은 파라미터라 부르고, 함수에서 값을 넣어줄 때, 그 값들은 인자라고 부른다.
+* 함수 파라미터에서 rest를 사용한 것과 비슷한데, 반대의 역할을 한다.
+
+```javascript
+function sum(...rest) {
+  return rest.reduce((acc, current) => acc + current, 0);
+}
+
+const numbers = [1, 2, 3, 4, 5, 6];
+const result = sum(...numbers);
+console.log(result);
+```
+
+### 자바스크립트 Scope
+* Scope란, 변수나 함수를 선언하게 될 때 해당 변수 또는 함수가 유효한 범위를 의미한다.
+* Scope는 총 3가지 종류가 있다.
+	1. Global (전역) Scope: 코드의 모든 범위에서 사용이 가능
+	2. Function (함수) Scope: 함수 안에서만 사용이 가능
+	3. Block (블록) Scope: if, for, switch 등 특정 블록 내부에서만 사용이 가능
+* `const`와 `let`로 선언한 값은 Block Scope로 선언이 되기 때문에 if문 같은 블록 내에서 새로운 변수/상수를 선언하게 된다면, 해당 블록 내부에서만 사용이 가능하고, 블록 밖의 범위에서 똑같은 이름을 가진 값이 있다고 해도 영향을 주지 않는다.
+* 반면, var는 Function Scope로 선언이 되므로, if문 블록 내부에서 선언한 value 값이 블록 밖의 value에도 영향을 미치게 된다.
+
+### Hoisting
+* 자바스크립트에서 아직 선언되지 않은 함수/변수를 끌어올려서 사용할 수 있는 자바스크립트의 작동 방식을 의미한다.
+
+```javascript
+myFunction();
+
+function myFunction() {
+  console.log('hello world!');
+}
+```
+* 위의 코드를 보면 myFunction함수를 선언하기 전에 호출했음에도 불구하고 코드는 정상적으로 작동한다.
+* 잘 작동하는 이유는, 자바스크립트 엔진이 위 코드를 해석하는 과정에서 Hoisting하여 받아들이게 되기 때문이다.
+* 변수 또한 Hoisting된다.
+
+```javascript
+console.log(number);
+var number = 2;
+
+// 결괏값
+undefined
+```
+* 원래는 number이 정의되지 않았다는 에러메세지가 발생해야 하는데, 자바스크립트 엔진이 위 코드를 해석할 때 다음과 같이 받아들이게 되기 때문에 undefined가 출력된다.
+
+```javascript
+var number;
+console.log(number);
+number = 2;
+```
+
+
+
+* 반면, `const`와 `let`은 호이스팅은 되지만 변수 생성과정이 달라서 TDZ가 생성되어 초기화전에는 액세스할 수 없다는 에러가 발생하게 된다.
+* Hoisting은 자바스크립트 엔진이 갖고 있는 성질이며, 방지하는 것이 좋다.
+* Hoisting이 발생하는 코드는 이해하기 어렵고 유지보수도 힘들어지고 의도치 않는 결과물이 나타나기 쉽기 때문
+	* 함수의 경우 꼭 선언 후에 호출을 하자.
+	* `var` 대신 `const`, `let`을 위주로 사용하자
+
