--- a/_posts/2021-07-20-0719-0725.md
+++ b/_posts/2021-07-20-0719-0725.md
@@ -1129,3 +1129,216 @@ number = 2;
 	* 함수의 경우 꼭 선언 후에 호출을 하자.
 	* `var` 대신 `const`, `let`을 위주로 사용하자
 
+
+## 0723
+# 10일 차 알고리즘 문제 풀이
+## 알고리즘
+### K번째 큰 수
+![03-01](../../assets/images/algorithm/03/01.png)
+
+```javascript
+function solution(nums, k) {
+    let answer = 0;
+    let arr = [];
+
+    for (let i = 0; i < nums.length - 2; i++) {
+        for (let j = i + 1; j < nums.length - 1; j++) {
+            for (let k = j + 1; k < nums.length; k++) {
+                let sum = nums[i] + nums[j] + nums[k];
+
+                if (!arr.includes(sum)) {
+                    arr.push(sum);
+                }
+            }
+        }
+    }
+
+    arr.sort((a, b) => b - a);
+
+    answer = arr[k - 1] || -1;
+
+    return answer;
+}
+
+console.log(solution([13, 15, 34, 23, 45, 65, 33, 11, 26, 42], 3));
+console.log(solution([5, 5, 5, 4, 4, 3, 2, 1], 2));
+```
+* 세 장을 뽑아야 하기 때문에 3중 반복문을 실행했다.
+* 반복문의 범위를 첫 번째는 0부터 배열의 길이 - 2까지, 두 번째는 i + 1부터 배열의 길이 - 1까지, 마지막은 j + 1부터 배열의 길이까지 돌게 해서, 동일한 연산을 또 하거나 같은 카드를 더하는 일이 없도록 했다.
+* 세 카드를 합한 값을 새로운 배열에 없는 값이라면 그 배열에 삽입했다.
+* 그리고 배열을 내림차순으로 정렬해서 k번째 값이 있다면 그 값을, 없다면 -1을 반환하도록 했다.
+	* 내림차순: `arr.sort((a, b) => b - a);`
+
+### 졸업 선물
+![03-02](../../assets/images/algorithm/03/02.png)
+
+```javascript
+function solution(nums, m) {
+    let answer = 0;
+    let price = 0;
+    let discount = 0;
+
+    nums.sort((a, b) => (a[0] + a[1]) - (b[0] + b[1]));
+
+    console.log(nums);
+
+    for (let j = 0; j < nums.length; j++) {
+        price = nums[j][0] + nums[j][1];
+        discount = (nums[j][0] / 2) + nums[j][1] / 2;
+
+        if (m > price) {
+            m -= price;
+            answer++;
+        } else if (m > discount) {
+            m -= discount;
+            answer++;
+        } else {
+            break;
+        }
+    }
+    return answer;
+}
+
+console.log(solution([[6, 6], [2, 2], [4, 3], [4, 5], [10, 3]], 28));
+console.log(solution([[8, 6], [2, 2], [4, 3], [4, 5], [6, 4]], 27));
+console.log(solution([[8, 6], [2, 2], [4, 3], [4, 5], [12, 1]], 41));
+```
+* 사실 이 문제는 어떻게 답을 도출해내기는 했지만 이 답이 확실한지 장담을 못하겠다.
+* 우선 물건값과 배송비를 더한 결과로 내림차순 정렬을 했다.
+* 그리고 반복문을 실행해서 일반 가격과 할인 가격을 모두 구하고, if문으로 현재 가진 돈이 가격보다 크다면 금액을 빼고 답을 1 증가시켰고, 현재 가진 돈이 일반 가격보단 작지만 할인 가격보단 크다면 그 금액으로 구매했다. 그리고 둘 다 충족하지 않는다면 반복문을 굳이 더 실행할 이유가 없기에 종료시켰다.
+* 논리적으로만 생각해서 코드를 이렇게 구현했지만 과연 이게 모든 테스트 케이스를 통과할 수 있을까하는 의문이 들었다.
+
+### 최대 매출
+![03-03](../../assets/images/algorithm/03/03.png)
+
+```javascript
+function solution(nums, k) {
+    let answer = 0;
+    
+    for(let i = 0; i < nums.length - k + 1; i++) {
+        let sum = 0;
+        for(let j = i; j < i + k; j++) {
+            sum += nums[j];
+        }
+        console.log(sum);
+        if (sum > answer) answer = sum;
+    }
+
+    return answer;
+}
+
+console.log(solution([12, 15, 11, 20, 25, 10, 20, 19, 13, 15], 3));
+```
+* 연속 매출을 기준으로 값을 구해야 하기에 반복문의 범위 설정이 중요했다.
+* 첫 번째 반복문은 받은 매출기록 길이만큼 반복하고, 두 번째 반복문에서 변수를 i부터 i + k까지 실행시켜서 연속된 k일의 매출을 구하도록 했다.
+* 그리고 최대값을 구할 수 있도록 비교하는 코드를 작성해 결과를 도출했다.
+
+### 공통원소 구하기
+![03-04](../../assets/images/algorithm/03/04.png)
+
+```javascript
+function solution(numA, numB) {
+    let answer = [];
+
+    for (let i = 0; i < numA.length; i++) {
+        for (let j = 0; j < numB.length; j++) {
+            if (numA[i] === numB[j]) answer.push(numA[i]);
+        }
+    }
+    answer.sort((a, b) => a - b);
+
+    return answer;
+}
+
+console.log(solution([1, 3, 9, 5, 2], [3, 2, 5, 7, 10]));
+```
+* 이중 반복문을 이용해서 쉽게 구현하였지만, 문제에 시간복잡도를 고려해야 하는 문제라고 쓰여있는 것을 보아서는 정답은 아니라고 생각한다.
+* 하지만 아직 특정 알고리즘까지 학습하지는 않아서 어떤 것을 적용해야 할지는 모르겠다. 아직은 사전 과제이기 때문에 일단은 이렇게 해결하고 알고리즘을 학습한 뒤, 그 알고리즘을 적용하여 시간복잡도를 만족시켜야겠다.
+
+### 연속 부분수열
+![03-05](../../assets/images/algorithm/03/05.png)
+
+```javascript
+function solution(nums, m) {
+    answer = 0;
+
+    for (let i = 0; i < nums.length; i++) {
+        let sum = nums[i];
+
+        if (sum === m) {
+            answer++;
+            continue;
+        }
+        for (let j = i + 1; j < nums.length ; j++) {
+            sum += nums[j];
+            if (sum === m) {
+                answer++;
+                break;
+            } else if (sum > m) {
+                break;
+            }
+        }
+    }
+
+    return answer;
+}
+
+console.log(solution([1, 2, 1, 3, 1, 1, 1, 2], 6));
+```
+* 이 문제도 시간복잡도를 고려해야 하는 문제였다. 비록 이중반복문을 사용해서 구현하기는 했지만, 조금이라도 반복 횟수를 줄이기 위해서 코드를 고민했다.
+* 우선 수열의 첫 번째 값이 특정 숫자와 같다면 바로 반복문을 건너띄고 다음 인덱스로 넘어갔다.
+* 그리고 순차적으로 값을 더해서 값이 특정 숫자의 값을 넘어가면 바로 반복문을 종료시키고  다음 인덱스로 넘어가게 구현해서 쓸데없이 반복이 되지 않도록 구현했다.
+
+### 올바른 괄호
+![03-06](../../assets/images/algorithm/03/06.png)
+
+```javascript
+function solution(s) {
+    let answer = '';
+    let leftCnt = 0;
+    let rightCnt = 0;
+
+    for(let i = 0; i < s.length; i++) {
+        if(s.charAt(i) === '(') leftCnt++;
+        else if(s.charAt(i) === ')') rightCnt++;
+    }
+
+    answer = leftCnt === rightCnt ? 'YES' : 'NO';
+
+    return answer;
+}
+
+console.log(solution('(()(()))(()'));
+```
+* 문자열을 반복문으로 돌면서 각 문자를 체크해서 괄호 개수를 세고, 양 개수가 같다면 YES 아니라면 NO를 반환하였다.
+
+### 공주구하기
+![03-07](../../assets/images/algorithm/03/07.png)
+
+```javascript
+function solution(n, k) {
+    let answer = 0;
+    let arr = new Array(n);
+    
+    for (let i = 0; i < n; i++) {
+        arr[i] = i + 1;
+    }
+
+    for (let i = 0; i < n - 1; i++) {
+        for (let i = 0; i < k; i++) {
+            let item = arr.shift();
+            arr.push(item);
+        }
+        arr.pop();
+    }
+    answer = arr[0]
+
+    return answer;
+}
+
+console.log(solution(8, 3));
+```
+* 새로운 n개의 요소를 가진 배열을 선언하고, 배열에 1부터 n까지 값을 초기화했다.
+* 배열을 돌면서, 배열 내장함수를 사용하여 요구사항을 만족시키고 최종 남은 값을 출력했다.
+
+
